syntax = "proto3";

package auth;

option go_package = "./pkg/grpc/protoc/auth";

// ============== Messages ==============

// User message to be returned after registration
message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
}

// --- Register (for Customers) ---
message RegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

// Response for both Register and RegisterStaff
message RegisterResponse {
    User user = 1;
}

// --- Register Staff ---
message RegisterStaffRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    string company_id = 5; // Opsional
    string store_id = 6;   // Opsional
}

// --- Login ---
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}


// ============== Service Definition ==============

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc RegisterStaff(RegisterStaffRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}